# EvilMind

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  README_EN.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_batch.py
agents/: __init__.py  base.py  claude_checker.py  claude_diver.py  debate_synthesizer.py  fact_investigator.py  fingerprint_team.py  jury.py  malice_hypothesis.py  publisher.py  search_360.py  search_firecrawl.py  search_osint.py  truth_publisher.py
api/: server.py
config/: __init__.py  categories.py  settings.py
data/: seed_patterns.json  test_rumors.json  weibo_seed.json
docs/: README.md  manual.tex
frontend/: app.js  index.html  style.css
knowledge/: cognitive_warfare.py  evolution.py  fingerprint.py  store.py
llm/: __init__.py  client.py
pipeline/: __init__.py  orchestrator.py
reports/: report.py
search/: __init__.py  ocr.py  web_search.py
tools/: firecrawl_tool.py  openosint_tool.py  playwright_scraper.js
web/: app.html  app.js  guide.html  landing.html  style.css
